2nd repo bs-pagination & footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#">Aretes</a>
             </li>
             <li class="navbar-item">
-              <a class="nav-link" href="brazaletes.html">Brazaletes</a>
+              <a class="nav-link" href="brazaletes_1.html">Brazaletes</a>
             </li>
             <li class="navbar-item">
               <a class="nav-link" href="#">Collares</a>
@@ -128,7 +128,7 @@
           <img class="img-size d-block w-100" src="images/collar.png" alt="">
           <!-- CAPTION 1 -->
           <div class="carousel-caption d-none d-md-block">
-            <h5>COLLAR</h5>
+            <h5>COLLARES</h5>
           </div>
         </div>
 
@@ -136,7 +136,7 @@
           <img class="img-size d-block w-100" src="images/pulsera.png" alt="">
           <!-- CAPTION 1 -->
           <div class="carousel-caption d-none d-md-block">
-            <h5>PULSERA</h5>
+            <h5>BRAZALETES</h5>
           </div>
         </div>
 
