--- a/brazaletes_1.html
+++ b/brazaletes_1.html
@@ -67,18 +67,19 @@
 
   <section class="container text-center" style="margin-top:150px;">
 
-
     <div class="row row-cols-1 row-cols-md-2 g-4">
+
+      <!-- ITEM 1 -->
       <div class="col">
         <div class="card">
 
-          <div id="carouselSlides" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+          <div id="carouselSlides_1" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
             <!-- IMÁGENES 1 -->
             <div class="carousel-inner">
 
-              <div class="carousel-item active">
+              <div class="carousel-item">
                 <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_01.png" alt="">
               </div>
 
@@ -86,14 +87,14 @@
                 <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_02.png" alt="">
               </div>
 
-              <div class="carousel-item">
+              <div class="carousel-item active">
                 <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_03.png" alt="">
               </div>
             </div>
 
-            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides -->
+            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_1 -->
             <!-- IDEA: carousel-control-prev -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_1" data-bs-slide="prev">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <!-- IDEA: visually-hidden -->
@@ -101,7 +102,7 @@
             </button>
 
             <!-- IDEA: carousel-control-next -->
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_1" data-bs-slide="next">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <!-- IDEA: visually-hidden -->
@@ -117,10 +118,10 @@
         </div>
       </div>
 
-
+      <!-- ITEM 2 -->
       <div class="col">
         <div class="card">
-          <div id="carouselSlides_4" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+          <div id="carouselSlides_2" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
             <!-- IMÁGENES 1 -->
@@ -136,6 +137,103 @@
 
 
 
+
+            </div>
+
+            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_2 -->
+            <!-- IDEA: carousel-control-prev -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_2" data-bs-slide="prev">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Previous</span>
+            </button>
+
+            <!-- IDEA: carousel-control-next -->
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_2" data-bs-slide="next">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Next</span>
+            </button>
+
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Brazalete de Cuarzo</h5>
+            <p class="card-text text-muted">$350.00</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- ITEM 3 -->
+      <div class="col">
+        <div class="card">
+          <div id="carouselSlides_3" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+
+
+            <!-- IMÁGENES 1 -->
+            <div class="carousel-inner">
+
+              <div class="carousel-item active">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_01.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_02.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_03.png" alt="">
+              </div>
+
+
+            </div>
+
+            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_3 -->
+            <!-- carousel-control-prev -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_3" data-bs-slide="prev">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Previous</span>
+            </button>
+
+            <!-- carousel-control-next -->
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_3" data-bs-slide="next">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Next</span>
+            </button>
+
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Brazalete Marino</h5>
+            <p class="card-text text-muted">Precio: $400.00</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- ITEM 4 -->
+      <div class="col">
+        <div class="card">
+          <div id="carouselSlides_4" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+
+
+            <!-- IMÁGENES 1 -->
+            <div class="carousel-inner">
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_01.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_02.png" alt="">
+              </div>
+
+              <div class="carousel-item active">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_03.png" alt="">
+              </div>
 
             </div>
 
@@ -158,88 +256,34 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete de Cuarzo</h5>
-            <p class="card-text text-muted">$350.00</p>
+            <h5 class="card-title">Brazalete Marrón</h5>
+            <p class="card-text text-muted">$400.00</p>
           </div>
         </div>
       </div>
 
-
-
+      <!-- ITEM 5 -->
       <div class="col">
         <div class="card">
-          <div id="carouselSlides_2" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+          <div id="carouselSlides_5" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
             <!-- IMÁGENES 1 -->
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_01.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_02.png" alt="">
-              </div>
-
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_03.png" alt="">
-              </div>
-
-
-            </div>
-
-            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_2 -->
-            <!-- carousel-control-prev -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_2" data-bs-slide="prev">
-              <!-- IDEA: carousel-control-prev-icon -->
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <!-- IDEA: visually-hidden -->
-              <span class="visually-hidden">Previous</span>
-            </button>
-
-            <!-- carousel-control-next -->
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_2" data-bs-slide="next">
-              <!-- IDEA: carousel-control-prev-icon -->
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <!-- IDEA: visually-hidden -->
-              <span class="visually-hidden">Next</span>
-            </button>
-
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Brazalete Marino</h5>
-            <p class="card-text text-muted">Precio: $400.00</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col">
-        <div class="card">
-          <div id="carouselSlides_3" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
-
-
-            <!-- IMÁGENES 1 -->
-            <div class="carousel-inner">
-
-              <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_01.png" alt="">
-              </div>
-
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_02.png" alt="">
-              </div>
-
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_03.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_02.png" alt="">
               </div>
 
             </div>
 
-            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_3 -->
+            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_5 -->
             <!-- IDEA: carousel-control-prev -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_3" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_5" data-bs-slide="prev">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <!-- IDEA: visually-hidden -->
@@ -247,7 +291,7 @@
             </button>
 
             <!-- IDEA: carousel-control-next -->
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_3" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_5" data-bs-slide="next">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <!-- IDEA: visually-hidden -->
@@ -256,16 +300,77 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Marrón</h5>
+            <h5 class="card-title">Brazalete Azul</h5>
             <p class="card-text text-muted">$400.00</p>
           </div>
         </div>
       </div>
 
+      <!-- ITEM 6 -->
+      <div class="col">
+        <div class="card">
+          <div id="carouselSlides_6" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
+
+            <!-- IMÁGENES 1 -->
+            <div class="carousel-inner">
+
+              <div class="carousel-item active">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Perlas_Azul_01.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Perlas_Azul_02.png" alt="">
+              </div>
+
+            </div>
+
+            <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_6 -->
+            <!-- IDEA: carousel-control-prev -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_6" data-bs-slide="prev">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Previous</span>
+            </button>
+
+            <!-- IDEA: carousel-control-next -->
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_6" data-bs-slide="next">
+              <!-- IDEA: carousel-control-prev-icon -->
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <!-- IDEA: visually-hidden -->
+              <span class="visually-hidden">Next</span>
+            </button>
+
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Brazalete de Cristales</h5>
+            <p class="card-text text-muted">$400.00</p>
+          </div>
+        </div>
+      </div>
 
     </div>
   </section>
+
+  <section class="pag_links">
+
+    <div class="container-fluid" style="margin-top:100px;">
+      <nav class="">
+        <ul class="pagination pagination-md justify-content-center">
+          <li class="page-item"><a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span></a></li>
+          <li class="page-item active"><a class="page-link" href="brazaletes_1.html">1</a></li>
+          <li class="page-item"><a class="page-link" href="brazaletes_2.html">2</a></li>
+          <li class="page-item"><a class="page-link" href="brazaletes_2.html" aria-label="Next"><span aria-hidden="true">&raquo;</span></a> </li>
+        </ul>
+      </nav>
+    </div>
+
+  </section>
+
+
+
 
   <footer class="bg-light text-center text-lg-start" style="margin-top:100px;">
     <!-- Copyright -->
@@ -278,6 +383,8 @@
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
+
+
 </body>
 
 </html>
