--- a/brazaletes_2.html
+++ b/brazaletes_2.html
@@ -108,8 +108,8 @@
           </div>
 
           <div class="card-body">
-            <h5 class="card-title">Brazalete Aguamarina</h5>
-            <p class="card-text text-muted">$500.00</p>
+            <h5 class="card-title">Brazalete Aguamarina Tornasol</h5>
+            <p class="card-text text-muted">$199.00</p>
           </div>
         </div>
       </div>
@@ -156,7 +156,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Brazalete de Cuarzo</h5>
-            <p class="card-text text-muted">$350.00</p>
+            <p class="card-text text-muted">$199.00</p>
           </div>
         </div>
       </div>
@@ -204,8 +204,8 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Ojo-Flor</h5>
-            <p class="card-text text-muted">Precio: $400.00</p>
+            <h5 class="card-title">Brazalete Doble Ojo-Flor</h5>
+            <p class="card-text text-muted">$189.00</p>
           </div>
         </div>
       </div>
@@ -250,7 +250,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Brazalete Corazón</h5>
-            <p class="card-text text-muted">Precio: $400.00</p>
+            <p class="card-text text-muted">$120.00</p>
           </div>
         </div>
       </div>
@@ -266,11 +266,15 @@
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristal_Negro_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristal_Negro_02.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristal_Negro_03.png" alt="">
               </div>
 
             </div>
@@ -294,8 +298,8 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Azul</h5>
-            <p class="card-text text-muted">$400.00</p>
+            <h5 class="card-title">Brazalete Trébol</h5>
+            <p class="card-text text-muted">$110.00</p>
           </div>
         </div>
       </div>
@@ -310,11 +314,11 @@
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Mechon_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Mechon_02.png" alt="">
               </div>
 
             </div>
@@ -338,8 +342,8 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete de Cristales</h5>
-            <p class="card-text text-muted">$400.00</p>
+            <h5 class="card-title">Brazalete Lágrima de Ámbar y Escobilla</h5>
+            <p class="card-text text-muted">$179.00</p>
           </div>
         </div>
       </div>
@@ -358,7 +362,8 @@
               <span aria-hidden="true">&laquo;</span></a></li>
           <li class="page-item"><a class="page-link" href="brazaletes_1.html">1</a></li>
           <li class="page-item active"><a class="page-link" href="brazaletes_2.html">2</a></li>
-          <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a> </li>
+          <li class="page-item"><a class="page-link" href="brazaletes_3.html">3</a></li>
+          <li class="page-item"><a class="page-link" href="brazaletes_3.html" aria-label="Next"><span aria-hidden="true">&raquo;</span></a> </li>
         </ul>
       </nav>
     </div>
