--- a/brazaletes_3.html
+++ b/brazaletes_3.html
@@ -79,17 +79,18 @@
             <!-- IMÁGENES 1 -->
             <div class="carousel-inner">
 
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_01.png" alt="">
-              </div>
-
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_02.png" alt="">
-              </div>
-
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_03.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Swarovski_01.png" alt="">
               </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Swarovski_02.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Swarovski_03.png" alt="">
+              </div>
+
             </div>
 
             <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_1 -->
@@ -112,8 +113,8 @@
           </div>
 
           <div class="card-body">
-            <h5 class="card-title">Brazalete de Cristales Tornasol</h5>
-            <p class="card-text text-muted">$230.00</p>
+            <h5 class="card-title">Brazalete Corazón Swarovski </h5>
+            <p class="card-text text-muted">$290.00</p>
           </div>
         </div>
       </div>
@@ -124,19 +125,20 @@
           <div id="carouselSlides_2" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
-            <!-- IMÁGENES 1 -->
+            <!-- IMÁGENES 2 -->
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cuarzo_01.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Semanario_Cleopatra_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cuarzo_02.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Semanario_Cleopatra_02.png" alt="">
               </div>
 
-
-
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Semanario_Cleopatra_03.png" alt="">
+              </div>
 
             </div>
 
@@ -159,8 +161,8 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete de Cuarzo y Corazón</h5>
-            <p class="card-text text-muted">$190.00</p>
+            <h5 class="card-title">Semanario Cleopatra </h5>
+            <p class="card-text text-muted">$390.00</p>
           </div>
         </div>
       </div>
@@ -171,19 +173,19 @@
           <div id="carouselSlides_3" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
-            <!-- IMÁGENES 1 -->
+            <!-- IMÁGENES 3 -->
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_01.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Macrame_Silver_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_02.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Macrame_Silver_02.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Marino_03.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Macrame_Silver_03.png" alt="">
               </div>
 
 
@@ -208,11 +210,12 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Zig-Zag Marino y Mostacillas</h5>
-            <p class="card-text text-muted">$120.00</p>
+            <h5 class="card-title">Brazalete Macramé Plateado</h5>
+            <p class="card-text text-muted">$170.00</p>
           </div>
         </div>
       </div>
+
 
       <!-- ITEM 4 -->
       <div class="col">
@@ -220,25 +223,26 @@
           <div id="carouselSlides_4" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
-            <!-- IMÁGENES 1 -->
+            <!-- IMÁGENES 4 -->
             <div class="carousel-inner">
 
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_01.png" alt="">
-              </div>
-
-              <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_02.png" alt="">
-              </div>
-
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_Marron_03.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Caramelo_01.png" alt="">
               </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Caramelo_02.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Caramelo_03.png" alt="">
+              </div>
+
 
             </div>
 
             <!-- CARRUSEL DENTRO DEL DIV PRINCIPAL ID=carouselSlides_4 -->
-            <!-- IDEA: carousel-control-prev -->
+            <!-- carousel-control-prev -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides_4" data-bs-slide="prev">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -246,7 +250,7 @@
               <span class="visually-hidden">Previous</span>
             </button>
 
-            <!-- IDEA: carousel-control-next -->
+            <!-- carousel-control-next -->
             <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides_4" data-bs-slide="next">
               <!-- IDEA: carousel-control-prev-icon -->
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -256,11 +260,12 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Marrón y Mostacillas</h5>
-            <p class="card-text text-muted">$220.00</p>
+            <h5 class="card-title">Brazalete Caramelo Tejido</h5>
+            <p class="card-text text-muted">$270.00</p>
           </div>
         </div>
       </div>
+
 
       <!-- ITEM 5 -->
       <div class="col">
@@ -268,16 +273,19 @@
           <div id="carouselSlides_5" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
-            <!-- IMÁGENES 1 -->
+            <!-- IMÁGENES 5 -->
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_01.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Plateado_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Cristales_02.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Plateado_02.png" alt="">
               </div>
+
+
+
 
             </div>
 
@@ -300,8 +308,8 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Pulsera de Zirconias</h5>
-            <p class="card-text text-muted">$110.00</p>
+            <h5 class="card-title">Brazalete Flor de Zirconia</h5>
+            <p class="card-text text-muted">$179.00</p>
           </div>
         </div>
       </div>
@@ -312,15 +320,19 @@
           <div id="carouselSlides_6" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
 
 
-            <!-- IMÁGENES 1 -->
+            <!-- IMÁGENES 6 -->
             <div class="carousel-inner">
 
               <div class="carousel-item active">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Perlas_Azul_01.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Infantil_01.png" alt="">
               </div>
 
               <div class="carousel-item">
-                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Perlas_Azul_02.png" alt="">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Infantil_02.png" alt="">
+              </div>
+
+              <div class="carousel-item">
+                <img class="card-img-top d-block w-100" src="images/brazaletes/Brazalete_Infantil_03.png" alt="">
               </div>
 
             </div>
@@ -344,11 +356,13 @@
 
           </div>
           <div class="card-body">
-            <h5 class="card-title">Brazalete Oruga de Cristales</h5>
-            <p class="card-text text-muted">$220.00</p>
+            <h5 class="card-title">Brazalete Multicolor y Girasoles</h5>
+            <p class="card-text text-muted">$79.00</p>
           </div>
         </div>
       </div>
+
+
 
     </div>
   </section>
@@ -358,12 +372,12 @@
     <div class="container-fluid" style="margin-top:100px;">
       <nav class="">
         <ul class="pagination pagination-md justify-content-center">
-          <li class="page-item"><a class="page-link" href="#" aria-label="Previous">
+          <li class="page-item"><a class="page-link" href="brazaletes_2.html" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span></a></li>
-          <li class="page-item active"><a class="page-link" href="brazaletes_1.html">1</a></li>
+          <li class="page-item"><a class="page-link" href="brazaletes_1.html">1</a></li>
           <li class="page-item"><a class="page-link" href="brazaletes_2.html">2</a></li>
-          <li class="page-item"><a class="page-link" href="brazaletes_3.html">3</a></li>
-          <li class="page-item"><a class="page-link" href="brazaletes_2.html" aria-label="Next"><span aria-hidden="true">&raquo;</span></a> </li>
+          <li class="page-item active"><a class="page-link" href="brazaletes_3.html">3</a></li>
+          <li class="page-item"><a class="page-link" href="brazaletes_3.html" aria-label="Next"><span aria-hidden="true">&raquo;</span></a> </li>
         </ul>
       </nav>
     </div>
