--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="carousel-item active">
             <img
               class="img-size d-block w-100"
-              src="images/anillos.png"
+              src="images/Anillos.png"
               alt=""
             />
             <!-- CAPTION 1 -->
@@ -147,7 +147,7 @@
           <div class="carousel-item">
             <img
               class="img-size d-block w-100"
-              src="images/aretes.png"
+              src="images/Aretes.png"
               alt=""
             />
             <!-- CAPTION 2 -->
@@ -159,7 +159,7 @@
           <div class="carousel-item">
             <img
               class="img-size d-block w-100"
-              src="images/collar.png"
+              src="images/Collar.png"
               alt=""
             />
             <!-- CAPTION 1 -->
@@ -171,7 +171,7 @@
           <div class="carousel-item">
             <img
               class="img-size d-block w-100"
-              src="images/pulsera.png"
+              src="images/Pulsera.png"
               alt=""
             />
             <!-- CAPTION 1 -->
