--- a/brazaletes_1.html
+++ b/brazaletes_1.html
@@ -83,7 +83,7 @@
           <div class="card">
             <div
               id="carouselSlides_1"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -159,7 +159,7 @@
           <div class="card">
             <div
               id="carouselSlides_2"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -226,7 +226,7 @@
           <div class="card">
             <div
               id="carouselSlides_3"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -301,7 +301,7 @@
           <div class="card">
             <div
               id="carouselSlides_4"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -376,7 +376,7 @@
           <div class="card">
             <div
               id="carouselSlides_5"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -443,7 +443,7 @@
           <div class="card">
             <div
               id="carouselSlides_6"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
