deleted carousel-fade all pages

--- a/brazaletes_2.html
+++ b/brazaletes_2.html
@@ -83,7 +83,7 @@
           <div class="card">
             <div
               id="carouselSlides_1"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -151,7 +151,7 @@
           <div class="card">
             <div
               id="carouselSlides_2"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -218,7 +218,7 @@
           <div class="card">
             <div
               id="carouselSlides_3"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -293,7 +293,7 @@
           <div class="card">
             <div
               id="carouselSlides_4"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -360,7 +360,7 @@
           <div class="card">
             <div
               id="carouselSlides_5"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -435,7 +435,7 @@
           <div class="card">
             <div
               id="carouselSlides_6"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
