--- a/brazaletes_3.html
+++ b/brazaletes_3.html
@@ -83,7 +83,7 @@
           <div class="card">
             <div
               id="carouselSlides_1"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 1 -->
@@ -159,7 +159,7 @@
           <div class="card">
             <div
               id="carouselSlides_2"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 2 -->
@@ -234,7 +234,7 @@
           <div class="card">
             <div
               id="carouselSlides_3"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 3 -->
@@ -309,7 +309,7 @@
           <div class="card">
             <div
               id="carouselSlides_4"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 4 -->
@@ -384,7 +384,7 @@
           <div class="card">
             <div
               id="carouselSlides_5"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 5 -->
@@ -451,7 +451,7 @@
           <div class="card">
             <div
               id="carouselSlides_6"
-              class="carousel carousel-dark slide carousel-fade"
+              class="carousel carousel-dark slide"
               data-bs-ride="carousel"
             >
               <!-- IMÁGENES 6 -->
