5th - Updated links and images

--- a/brazaletes_1.html
+++ b/brazaletes_1.html
@@ -540,7 +540,7 @@
             <li class="page-item">
               <a class="page-link" href="brazaletes_3.html">3</a>
             </li>
-            <li class="page-item">
+            <li class="page-item disabled">
               <a class="page-link" href="brazaletes_4.html">4</a>
             </li>
             <li class="page-item">
