--- a/brazaletes_3.html
+++ b/brazaletes_3.html
@@ -545,10 +545,10 @@
             <li class="page-item active">
               <a class="page-link" href="brazaletes_3.html">3</a>
             </li>
-            <li class="page-item">
+            <li class="page-item disabled">
               <a class="page-link" href="brazaletes_4.html">4</a>
             </li>
-            <li class="page-item">
+            <li class="page-item disabled">
               <a class="page-link" href="brazaletes_4.html" aria-label="Next"
                 ><span aria-hidden="true">&raquo;</span></a
               >
